--- a/its_lit/templates/main.html
+++ b/its_lit/templates/main.html
@@ -5,10 +5,14 @@
     <div class="map">
         <img src="static/map.jpg">
     </div>
-    <div class="buttons">
-        <div class="button-group">
-            <button>Home</button>
-        </div>
+    <div class="nav_buttons">
+        Navigate to:
+        <br>
+        <button type="button" class="btn btn-primary">Home</button>
+        <br>
+        <button type="button" class="btn btn-primary">Work</button>
+        <br>
+        <button type="button" class="btn btn-primary">School</button>
     </div>
 </div>
 {% endblock %}
