--- a/its_lit/templates/login.html
+++ b/its_lit/templates/login.html
@@ -1,12 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
 <img src="static/skyline.jpg" width="100%">
-<form class="navbar-form navbar-left" action="/main">
-    <div class="form-group">
-        <input id="username" type="text" class="form-control" placeholder="Username">
-        <input id="password" type="text" class="form-control" placeholder="Username">
-    </div>
-    <button id="login_btn" type="submit" class="btn btn-default">Login</button>
-</form>
+<div class="login-page">
+  <div class="form">
+    <form class="login-form" action="/main">
+      <input type="text" placeholder="username"/>
+      <input type="password" placeholder="password"/>
+      <button>login</button>
+      <p class="message">Not registered? <a href="#">Create an account</a></p>
+    </form>
+  </div>
+</div>
 
 {% endblock %}
