--- a/its_lit/templates/base.html
+++ b/its_lit/templates/base.html
@@ -2,135 +2,48 @@
     <head>
         <title>It's Lit NYC</title>
 
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <style>
             #background {
-                margin-left: -400px;
-                margin-top: -175px;
-                position: fixed;
+                position: absolute;
             }
             .content {
                 position: absolute;
-                margin-left: 13px;
-                margin-top: 84px;
-                width: 385px;
-                height: 680px;
+                margin-left: 30px;
+                margin-top: 119px;
+                width: 381px;
+                height: 679px;
+                overflow: scroll;
+                border: none;
             }
 
-@import url(https://fonts.googleapis.com/css?family=Roboto:300);
+            body {
+                margin: 0px;
+            }
 
-.login-page {
-  width: 360px;
-  padding: 8% 0 0;
-  margin: auto;
-}
-.form {
-  position: relative;
-  z-index: 1;
-  background: #FFFFFF;
-  max-width: 360px;
-  margin: 0 auto 100px;
-  padding: 45px;
-  text-align: center;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-}
-.form input {
-  font-family: "Roboto", sans-serif;
-  outline: 0;
-  background: #f2f2f2;
-  width: 100%;
-  border: 0;
-  margin: 0 0 15px;
-  padding: 15px;
-  box-sizing: border-box;
-  font-size: 14px;
-}
-.form button {
-  font-family: "Roboto", sans-serif;
-  text-transform: uppercase;
-  outline: 0;
-  background: #4CAF50;
-  width: 100%;
-  border: 0;
-  padding: 15px;
-  color: #FFFFFF;
-  font-size: 14px;
-  -webkit-transition: all 0.3 ease;
-  transition: all 0.3 ease;
-  cursor: pointer;
-}
-.form button:hover,.form button:active,.form button:focus {
-  background: #43A047;
-}
-.form .message {
-  margin: 15px 0 0;
-  color: #b3b3b3;
-  font-size: 12px;
-}
-.form .message a {
-  color: #4CAF50;
-  text-decoration: none;
-}
-.form .register-form {
-  display: none;
-}
-.container {
-  position: relative;
-  z-index: 1;
-  max-width: 300px;
-  margin: 0 auto;
-}
-.container:before, .container:after {
-  content: "";
-  display: block;
-  clear: both;
-}
-.container .info {
-  margin: 50px auto;
-  text-align: center;
-}
-.container .info h1 {
-  margin: 0 0 15px;
-  padding: 0;
-  font-size: 36px;
-  font-weight: 300;
-  color: #1a1a1a;
-}
-.container .info span {
-  color: #4d4d4d;
-  font-size: 12px;
-}
-.container .info span a {
-  color: #000000;
-  text-decoration: none;
-}
-.container .info span .fa {
-  color: #EF3B3A;
-}
+            .phone {
+                transform-origin: top left;
+            }
 
         </style>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
     </head>
 
     <body>
         <div class="phone">
             <img src="static/iphone.jpg" id="background">
-            <div class="content">
-                <img src="static/skyline.jpg" width="100%">
-                <div class="login-page">
-                    <div class="form">
-                        <form class="login-form" action="/main">
-                            <input type="text" placeholder="username"/>
-                            <input type="password" placeholder="password"/>
-                            <button>login</button>
-                            <p class="message">Not registered? <a href="#">Create an account</a></p>
-                        </form>
-                    </div>
-                </div>
-
-            </div>
+            <iframe class="content" src="login_page">
+            </iframe>
         </div>
+
+        <script>
+            function resize() {
+                var scale = window.innerHeight / $('#background').height();
+                $('.phone').css('transform', 'scale(' + scale + ')');
+                console.log('scaling to ' + scale);
+            }
+
+            $().ready(resize);
+            $(window).resize(resize);
+        </script>
     </body>
 </html>
