--- a/its_lit/templates/current_page.html
+++ b/its_lit/templates/current_page.html
@@ -1,12 +1,11 @@
-{% extends "base.html" %}
+{% extends "embedded.html" %}
 {% block content %}
-<img src="static/skyline.jpg" width="100%">
-<form class="navbar-form navbar-left" action="/main">
-    <div class="form-group">
-        <input id="username" type="text" class="form-control" placeholder="Username">
-        <input id="password" type="text" class="form-control" placeholder="Username">
-    </div>
-    <button id="login_btn" type="submit" class="btn btn-default">Login</button>
-</form>
-
+        <img src="static/skyline.jpg" width="100%">
+        <form class="navbar-form navbar-left" action="/main">
+            <div class="form-group">
+                <input id="username" type="text" class="form-control" placeholder="Username">
+                <input id="password" type="text" class="form-control" placeholder="Username">
+            </div>
+            <button id="login_btn" type="submit" class="btn btn-default">Login</button>
+        </form>
 {% endblock %}
