--- a/its_lit/templates/base.html
+++ b/its_lit/templates/base.html
@@ -30,8 +30,8 @@
 
     <body>
         <div class="phone">
-            <img src="static/iphone.jpg" id="background">
-            <iframe class="content" src="login_page">
+            <img src="static/iphone_black.jpg" id="background">
+            <iframe class="content" src={{page}}>
             </iframe>
         </div>
 
