--- a/its_lit/templates/current_page.html
+++ b/its_lit/templates/current_page.html
@@ -1,11 +1,56 @@
-{% extends "embedded.html" %}
-{% block content %}
-        <img src="static/skyline.jpg" width="100%">
-        <form class="navbar-form navbar-left" action="/main">
-            <div class="form-group">
-                <input id="username" type="text" class="form-control" placeholder="Username">
-                <input id="password" type="text" class="form-control" placeholder="Username">
-            </div>
-            <button id="login_btn" type="submit" class="btn btn-default">Login</button>
-        </form>
-{% endblock %}
+<html>
+    <head>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <style>
+            body {
+                margin: 0px;
+            }
+.button33 {
+    background-color: #ddcccc;
+    border: 1px solid black;
+    color: black;
+    font-family: Arial;
+    font-size: small;
+    text-decoration: none;
+    padding: 3px;
+}
+.alertText{
+    display: none;
+
+}
+        </style>
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    </head>
+    <body>
+<img src="skyline.jpg" width="100%">
+                <div class="login-page">
+                    <div class="form">
+                    <h1>Are your sure?</h1>
+                        <a href="#"><button class="button1">Yes</button></a>
+                        <a href="#"><button class="button2">No</button></a>
+                        <h2 id="download" >Alert was send.</h2>
+                        <script>
+                            var downloadButton = document.getElementById("download");
+                            var counter = 10;
+                            var newElement = document.createElement("p");
+                            newElement.innerHTML = "You can download the file in 10 seconds.";
+                            var id;
+
+                            downloadButton.parentNode.replaceChild(newElement, downloadButton);
+
+                            id = setInterval(function() {
+                                counter--;
+                                if(counter < 0) {
+                                    newElement.parentNode.replaceChild(downloadButton, newElement);
+                                    clearInterval(id);
+                                } else {
+                                    
+                                    newElement.innerHTML = "Alert will be send in " + counter.toString() + " seconds.";
+                                }
+                            }, 1000);
+                        </script>
+                    </div>
+
+    </body>
+</html>
