--- a/its_lit/templates/base.html
+++ b/its_lit/templates/base.html
@@ -34,6 +34,8 @@
             <iframe class="content" src={{page}}>
             </iframe>
         </div>
+        <div class="other_phone" style="position:absolute; right:0">
+            <a href="?page=notification.html">Show notification</a>
 
         <script>
             function resize() {
