--- a/its_lit/templates/base.html
+++ b/its_lit/templates/base.html
@@ -12,7 +12,7 @@
                 margin-top: 119px;
                 width: 381px;
                 height: 679px;
-                overflow: scroll;
+                overflow: hidden;
                 border: none;
             }
 
